# nitrovm

./: .gitignore  Makefile  README.md  SPEC.md  account.go  address.go  amount.go  amount_test.go  config.go  crypto.go  crypto_test.go  errors.go  gas.go  go.mod  go.sum  host.go  integration_test.go  interfaces.go  result.go  storage.go  vm.go  vm_test.go
.github/workflows/: ci.yml
cmd/nitroctl/: main.go  signing.go
cmd/nitrolite/: main.go
contracts/escrow/: Cargo.toml
contracts/escrow/src/: contract.rs  error.rs  msg.rs  state.rs
contracts/token/: Cargo.toml
contracts/token/src/: contract.rs  error.rs  msg.rs  state.rs
core/: account.go  address.go  address_test.go  amount.go  amount_test.go  config.go  errors.go  result.go
crypto/: crypto.go  crypto_test.go
node/: handler.go  handler_test.go  mock_vm_test.go  persist.go  server.go
runtime/: gas.go  host.go  integration_test.go  vm.go  vm_test.go
scripts/: test_signed.sh  test_token.sh
storage/: storage.go
storage/memory/: memory.go  memory_test.go
storage/sqlite/: sqlite.go  sqlite_test.go
test/: escrow_integration_test.go
